[gd_scene load_steps=25 format=3 uid="uid://k7dan74tnrbw"]

[ext_resource type="Script" uid="uid://bi2wsg354crl3" path="res://Scripts/Player/Player.gd" id="1_kyqiw"]
[ext_resource type="Texture2D" uid="uid://c30inosphvffd" path="res://Assets/Characters/Samurai/Sci-fi Samurai with Sword 124x49.png" id="1_rpqav"]
[ext_resource type="Script" uid="uid://dyuha4yjrpyvl" path="res://Scripts/Player/State/StateMachine.gd" id="3_dewec"]
[ext_resource type="Script" uid="uid://co5sxfyi7qtct" path="res://Scripts/Player/State/IdleState.gd" id="4_5ixxa"]
[ext_resource type="Script" uid="uid://c0q3wfhk5th7i" path="res://Scripts/Player/State/RunState.gd" id="5_52ee3"]
[ext_resource type="Script" uid="uid://cx2s21rsdccta" path="res://Scripts/Player/State/JumpState.gd" id="6_bhhdu"]
[ext_resource type="Script" uid="uid://djkqawlm6oxam" path="res://Scripts/Player/State/FallState.gd" id="7_megsn"]
[ext_resource type="Script" uid="uid://bp5naj8de4xho" path="res://Scripts/Player/State/AttackState.gd" id="8_bhhdu"]
[ext_resource type="Script" uid="uid://bk446yi2g0j80" path="res://Scripts/Player/State/AerialAttackState.gd" id="9_megsn"]
[ext_resource type="Script" uid="uid://dt304083qgjt0" path="res://Scripts/Player/State/HeavyAttackState.gd" id="10_yoq75"]
[ext_resource type="PackedScene" uid="uid://b3unlwj8ng0l7" path="res://Scenes/Player/NormalAttackHitbox.tscn" id="11_0kmp4"]
[ext_resource type="PackedScene" uid="uid://djrllwqt3cdao" path="res://Scenes/Player/HeavyAttackHitbox.tscn" id="12_i5acl"]
[ext_resource type="Script" uid="uid://bt2rfb2jqeh5x" path="res://Scripts/Player/PlayerHurtbox.gd" id="13_epg6k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rpqav"]
size = Vector2(10, 23)

[sub_resource type="Animation" id="Animation_gntrk"]
resource_name = "Attack"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(5, 6), Vector2i(6, 6), Vector2i(7, 6), Vector2i(8, 6), Vector2i(9, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NormalAttackHitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_megsn"]
resource_name = "Death"
length = 2.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 8), Vector2i(1, 8), Vector2i(2, 8), Vector2i(3, 8), Vector2i(4, 8), Vector2i(5, 8), Vector2i(6, 8), Vector2i(7, 8), Vector2i(8, 8), Vector2i(9, 8), Vector2i(10, 8), Vector2i(11, 8), Vector2i(12, 8), Vector2i(13, 8), Vector2i(14, 8), Vector2i(15, 8), Vector2i(16, 8), Vector2i(17, 8), Vector2i(18, 8), Vector2i(19, 8), Vector2i(20, 8), Vector2i(21, 8), Vector2i(22, 8)]
}

[sub_resource type="Animation" id="Animation_bhhdu"]
resource_name = "Fall"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-2.98023e-08, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4)]
}

[sub_resource type="Animation" id="Animation_yoq75"]
resource_name = "HeavyAttack"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(10, 6), Vector2i(11, 6), Vector2i(12, 6), Vector2i(13, 6), Vector2i(14, 6), Vector2i(15, 6), Vector2i(16, 6), Vector2i(17, 6), Vector2i(18, 6), Vector2i(19, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeavyAttackHitbox:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_dewec"]
resource_name = "Idle"
length = 2.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_52ee3"]
resource_name = "Jump"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_5ixxa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("NormalAttackHitbox:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HeavyAttackHitbox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nn08x"]
resource_name = "Run"
length = 1.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_52ee3"]
_data = {
&"Attack": SubResource("Animation_gntrk"),
&"Death": SubResource("Animation_megsn"),
&"Fall": SubResource("Animation_bhhdu"),
&"HeavyAttack": SubResource("Animation_yoq75"),
&"Idle": SubResource("Animation_dewec"),
&"Jump": SubResource("Animation_52ee3"),
&"RESET": SubResource("Animation_5ixxa"),
&"Run": SubResource("Animation_nn08x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5acl"]
size = Vector2(10, 23)

[node name="Player" type="CharacterBody2D"]
collision_mask = 524288
script = ExtResource("1_kyqiw")

[node name="DamageCooldown" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -19)
texture = ExtResource("1_rpqav")
hframes = 24
vframes = 9
frame = 24
region_enabled = true
region_rect = Rect2(-0.0174961, 8, 2976.02, 432)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11.5)
shape = SubResource("RectangleShape2D_rpqav")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_52ee3")
}
autoplay = "Idle"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_dewec")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("4_5ixxa")

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource("5_52ee3")

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("6_bhhdu")

[node name="FallState" type="Node" parent="StateMachine"]
script = ExtResource("7_megsn")

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource("8_bhhdu")

[node name="AerialAttackState" type="Node" parent="StateMachine"]
script = ExtResource("9_megsn")

[node name="HeavyAttackState" type="Node" parent="StateMachine"]
script = ExtResource("10_yoq75")

[node name="NormalAttackHitbox" parent="." instance=ExtResource("11_0kmp4")]
position = Vector2(0, -11)
collision_layer = 8
collision_mask = 4
monitoring = false
damage = 50

[node name="HeavyAttackHitbox" parent="." instance=ExtResource("12_i5acl")]
position = Vector2(1, -20)
collision_layer = 8
collision_mask = 4

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 34
script = ExtResource("13_epg6k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -11.5)
shape = SubResource("RectangleShape2D_i5acl")
debug_color = Color(0, 0.644179, 0.285993, 0.42)

[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_area_entered"]
[connection signal="damageTaken" from="Hurtbox" to="." method="_on_hurbox_damage_taken"]
